--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,3 +1,7 @@
-numpy==1.18.5
-scipy==1.3.3
-scikit-learn==0.23.2
+gensim==4.1.2
+lime==0.2.0.1
+spacy==3.2.3
+torch==1.11.0
+torchinfo==1.6.3
+torchsummary==1.5.1
+torchtext==0.9.0
